--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,31 @@
 # Dependencies
 node_modules/
 
-# Build outputs
-main.js
-*.js.map
+# Build output
+dist/
+build/
 
-# Development
-.env
-.env.local
-
-# Editor
+# IDE and editor files
 .vscode/
 .idea/
+*.sublime-project
+*.sublime-workspace
 
-# OS
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# Logs
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# Environment variables
+.env
+.env.local
+.env.*.local
